Improve meal quatity and preparation
Changes:
- Ingredient classnew identifies mandatory Ingredients and impact if missing
- HotMeal takes responsiblity retrieving the required ingreidents and assessing their presence at a Settlement
- HotMeal has a helper method to convert qualtiy to a string
- Cooking class records stats for dishes in a new approach usign a DishStats class
- Update UIs to use new methods

Part of #1571